# ChangeLog for net-www/w3m
# Copyright 2002-2004 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/net-www/w3m/ChangeLog,v 1.61 2004/08/26 11:11:50 usata Exp $

  26 Aug 2004; Mamoru KOMACHI <usata@gentoo.org> w3m-0.5.1-r1.ebuild:
  Stable on x86, alpha and ppc.

  08 Aug 2004; Tom Gall <tgall@gentoo.org> w3m-0.5.1-r1.ebuild:
  stable on ppc64, bug #57676

  07 Aug 2004; Tom Martin <slarti@gentoo.org> w3m-0.5.1-r1.ebuild:
  Marked ~amd64.

  14 Jun 2004; Aron Griffis <agriffis@gentoo.org> w3m-0.4.2.ebuild,
  w3m-0.5-r2.ebuild, w3m-0.5.1-r1.ebuild, w3m-0.5.1.ebuild:
  Fix use invocation

  06 Jun 2004; Jason Wever <weeve@gentoo.org> w3m-0.5.1.ebuild:
  Stable on sparc.

*w3m-0.5.1-r1 (30 May 2004)

  30 May 2004; Mamoru KOMACHI <usata@gentoo.org> w3m-0.3.2.2.ebuild,
  w3m-0.5.1-r1.ebuild, w3m-0.5.1.ebuild:
  Added async patch. Marked 0.5.1 stable on x86, ppc and alpha.
  Removed 0.3.2.2 from CVS tree

  03 May 2004; Jason Wever <weeve@gentoo.org> w3m-0.5-r2.ebuild:
  Stable on sparc.

*w3m-0.5.1 (01 May 2004)

  01 May 2004; Mamoru KOMACHI <usata@gentoo.org> w3m-0.5.1.ebuild:
  Version bumped. Added lynxkeymap IUSE flag. Thanks to Tom Martin
  <tom@edgeoftheinterweb.org.uk> for this feature. Closing bug #49397.
  async IUSE flag is removed for the moment.

  29 Apr 2004; Mamoru KOMACHI <usata@gentoo.org> w3m-0.5-r1.ebuild,
  w3m-0.5-r2.ebuild:
  Stable on x86 and alpha. IUSE cleanup.

*w3m-0.5-r2 (08 Apr 2004)

  08 Apr 2004; Mamoru KOMACHI <usata@gentoo.org> w3m-0.5-r2.ebuild:
  Enables m17n and unicode by default, see bug #47046

*w3m-0.5-r1 (25 Mar 2004)

  25 Mar 2004; Mamoru KOMACHI <usata@gentoo.org> w3m-0.5-r1.ebuild:
  Updated async and nls patch.

*w3m-0.5 (22 Mar 2004)

  22 Mar 2004; Mamoru KOMACHI <usata@gentoo.org> w3m-0.5.ebuild:
  Version bumped.

*w3m-0.4.2-r9 (17 Feb 2004)

  17 Feb 2004; Mamoru KOMACHI <usata@gentoo.org> w3m-0.4.2-r9.ebuild,
  files/w3m-0.4.2-async-m17n-gentoo.diff: