@@ -1,6 +1,9 @@
 # ChangeLog for net-www/w3m
 # Copyright 2002-2004 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/net-www/w3m/ChangeLog,v 1.61 2004/08/26 11:11:50 usata Exp $
+# $Header: /var/cvsroot/gentoo-x86/net-www/w3m/ChangeLog,v 1.62 2004/09/07 08:42:19 usata Exp $
+
+  07 Sep 2004; Mamoru KOMACHI <usata@gentoo.org> w3m-0.5.1.ebuild:
+  Sync IUSE.
 
   26 Aug 2004; Mamoru KOMACHI <usata@gentoo.org> w3m-0.5.1-r1.ebuild:
   Stable on x86, alpha and ppc.
